--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 @import url('./vendor/fonts.css');
 
+html {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
